--- a/styles/pokeapi.css
+++ b/styles/pokeapi.css
@@ -1,22 +1,74 @@
+* {
+  padding: 0;
+  margin: 0;
+}
+
 body {
-  background-color: orangered;
-  background-image: url("/assets/images/background.png");
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-attachment: fixed;
+  background-color: rgb(126, 225, 255);
   margin: 0;
   border: 0;
+  padding-top: 25%;
   height: 100%;
   width: 100%;
   font-family: rubik;
   color: white;
   box-sizing: border-box;
+  -webkit-animation: fadeIn 2s;
+          animation: fadeIn 2s;
+}
+
+header {
+  width: 100%;
+  height: 25%;
+  background-image: url("/assets/images/pokedex-header.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  top: 0;
+  margin: 0;
+  position: fixed;
+  z-index: 1;
+}
+
+.title {
+  width: 100%;
+  height: 70%;
+  background-image: url("/assets/images/pokedex-title.png");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: contain;
+  margin: 30px 0 20px 0;
+  -webkit-animation: fadeIn 2s;
+          animation: fadeIn 2s;
+  z-index: 2;
+}
+
+footer {
+  width: 100%;
+  height: 25%;
+  position: fixed;
+  background-image: url("/assets/images/pokedex-footer.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  bottom: 0%;
+  margin: 0;
+  z-index: 2;
+  opacity: 1;
+}
+
+main {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  margin: 0;
+  padding: 0;
 }
 
 .container {
-  height: 290px;
-  padding: 0px 0px 0px 0px;
-  margin: 50px 0 0 0;
+  height: 100%;
+  margin: 0 0 0 0;
   position: relative;
   display: flex;
   flex-direction: column;
@@ -28,16 +80,6 @@ h1 {
   text-transform: uppercase;
   text-align: center;
   font-size: 40px;
-}
-
-.title {
-  width: 100%;
-  height: 125px;
-  background-image: url("/assets/images/pokedex-title.png");
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: contain;
-  margin: 20px 0 20px 0;
 }
 
 .card {
@@ -88,17 +130,36 @@ h1 {
 }
 
 #pokedex {
-  width: 90%;
-  margin: 0 0 0 0;
-  padding: 10px 20px 0px 20px;
+  width: 100%;
+  padding-top: 30vh;
+  padding-bottom: 30vh;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: center;
-  gap: 15px;
+  gap: 10px;
   overflow: auto;
+  -webkit-animation: fadeIn 7s;
+          animation: fadeIn 7s;
 }
 
+@-webkit-keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
 ::-webkit-scrollbar {
   width: 10px;
 }
