--- a/styles/pokeapi.scss
+++ b/styles/pokeapi.scss
@@ -4,7 +4,7 @@
 }
 
 body {
-  background-color: rgb(126, 225, 255);
+  background-color: rgba(179, 233, 255, 0.63);
   margin: 0;
   border: 0;
   padding-top: 25%;
@@ -127,7 +127,7 @@ main {
 }
 
 .card-image {
-    width: 95%;
+    width: 100%;
     height: 90px;
     object-fit: contain;
     padding: 5px;
@@ -135,6 +135,7 @@ main {
 
 #pokedex {
     width: 100%;
+    max-width: 1080px;
     padding-top: calc(100vh - 70vh);
     padding-bottom: calc(100vh - 70vh);
     display: flex;
@@ -188,3 +189,35 @@ main {
   ::-webkit-scrollbar-thumb:hover {
     background: rgba(252, 235, 1, 0.822); 
   }
+
+
+
+// POKEMON CLASSES
+
+.grass {box-shadow: 0 0 40px 10px inset rgba(29, 204, 23, 0.712);}
+
+.fire {box-shadow: 0 0 40px 10px inset rgba(255, 0, 0, 0.445);}
+
+.water {box-shadow: 0 0 40px 10px inset rgba(0, 119, 255, 0.445);}
+
+.bug {box-shadow: 0 0 40px 10px inset rgba(195, 250, 106, 0.692);}
+
+.normal {box-shadow: 0 0 40px 10px inset rgba(255, 255, 255, 0.685);}
+
+.poison {box-shadow: 0 0 40px 10px inset rgba(197, 16, 233, 0.466);}
+
+.electric {box-shadow: 0 0 40px 10px inset rgba(251, 255, 5, 0.795);}
+
+.ground {box-shadow: 0 0 40px 10px inset rgba(99, 38, 10, 0.651);}
+
+.fighting {box-shadow: 0 0 40px 10px inset rgba(255, 86, 8, 0.685);}
+
+.fairy {box-shadow: 0 0 40px 10px inset rgba(250, 164, 236, 0.808);}
+
+.psychic {box-shadow: 0 0 40px 10px inset rgba(132, 0, 255, 0.664);}
+
+.rock {box-shadow: 0 0 40px 10px inset rgba(82, 82, 82, 0.336);}
+
+.ice {box-shadow: 0 0 40px 10px inset rgba(0, 225, 255, 0.822);}
+
+.dragon {box-shadow: 0 0 40px 10px inset rgba(255, 0, 98, 0.808);}
