--- a/styles/pokeapi.scss
+++ b/styles/pokeapi.scss
@@ -92,7 +92,7 @@ main {
     height: 115px;
     list-style: none;
     padding: 5px;
-    background-color: #ffffffb7;
+    background-color: #ffffff94;
     color: #222;
     text-align: center;
     border: 2px solid rgba(0, 0, 0, 0.5);
@@ -102,13 +102,8 @@ main {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    transition: 0.2s;
-
-    &:hover {
-        transform: scale(1.1);
-        transition: 0.2s;
-        box-shadow: 0 0 15px 10px inset rgb(255, 255, 255);
-    }
+    position: relative;
+    cursor: url("https://img.icons8.com/color/48/null/open-pokeball--v2.png"), pointer;
 }
 
 .card-title {
@@ -131,6 +126,12 @@ main {
     height: 90px;
     object-fit: contain;
     padding: 5px;
+    transition: 0.2s;
+
+    &:hover{
+        transform: scale(1.5);
+        transition: 0.2s;
+    }
 }
 
 #pokedex {
@@ -195,29 +196,43 @@ main {
 // POKEMON CLASSES
 
 .grass {box-shadow: 0 0 40px 10px inset rgba(29, 204, 23, 0.712);}
-
-.fire {box-shadow: 0 0 40px 10px inset rgba(255, 0, 0, 0.445);}
-
-.water {box-shadow: 0 0 40px 10px inset rgba(0, 119, 255, 0.445);}
-
-.bug {box-shadow: 0 0 40px 10px inset rgba(195, 250, 106, 0.692);}
-
-.normal {box-shadow: 0 0 40px 10px inset rgba(255, 255, 255, 0.685);}
-
-.poison {box-shadow: 0 0 40px 10px inset rgba(197, 16, 233, 0.466);}
-
+.fire {box-shadow: 0 0 40px 10px inset rgba(252, 18, 18, 0.753);}
+.water {box-shadow: 0 0 40px 10px inset rgba(29, 135, 255, 0.712);}
+.bug {box-shadow: 0 0 40px 10px inset rgba(191, 253, 92, 0.925);}
+.normal {box-shadow: 0 0 40px 10px inset rgba(255, 255, 255, 0.61);}
+.poison {box-shadow: 0 0 40px 10px inset rgba(215, 17, 255, 0.705);}
 .electric {box-shadow: 0 0 40px 10px inset rgba(251, 255, 5, 0.795);}
-
 .ground {box-shadow: 0 0 40px 10px inset rgba(99, 38, 10, 0.651);}
-
 .fighting {box-shadow: 0 0 40px 10px inset rgba(255, 86, 8, 0.685);}
-
-.fairy {box-shadow: 0 0 40px 10px inset rgba(250, 164, 236, 0.808);}
-
-.psychic {box-shadow: 0 0 40px 10px inset rgba(132, 0, 255, 0.664);}
-
-.rock {box-shadow: 0 0 40px 10px inset rgba(82, 82, 82, 0.336);}
-
+.fairy {box-shadow: 0 0 40px 10px inset rgb(252, 154, 235);}
+.psychic {box-shadow: 0 0 40px 10px inset rgba(127, 2, 245, 0.884);}
+.rock {box-shadow: 0 0 40px 10px inset rgba(5, 5, 5, 0.418);}
 .ice {box-shadow: 0 0 40px 10px inset rgba(0, 225, 255, 0.822);}
-
 .dragon {box-shadow: 0 0 40px 10px inset rgba(255, 0, 98, 0.808);}
+
+.legendary {border: 2px outset rgb(255, 214, 80)}
+
+.flying {
+    width: 20px;
+    height: 20px;
+    background-image: url("/assets/icons/Flying\ type.ico");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    position: absolute;
+    top: 90%;
+    left: 40%;
+}
+
+.ghost {
+    width: 20px;
+    height: 20px;
+    background-image: url("/assets/icons/Ghost\ type.ico");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    position: absolute;
+    top: 90%;
+    left: 40%;
+}
+
