--- a/styles/pokeapi.css
+++ b/styles/pokeapi.css
@@ -140,7 +140,7 @@ h1 {
   flex-wrap: wrap;
   justify-content: center;
   gap: 10px;
-  overflow: auto;
+  overflow: scroll;
   -webkit-animation: fadeIn 7s;
           animation: fadeIn 7s;
 }
@@ -163,7 +163,7 @@ h1 {
   }
 }
 ::-webkit-scrollbar {
-  width: 10px;
+  width: 3px;
 }
 
 /* Track */
@@ -263,4 +263,39 @@ h1 {
   position: absolute;
   top: 90%;
   left: 40%;
+}
+
+.fullCard {
+  width: 100%;
+  height: 100vh;
+  background-color: rgb(54, 54, 54);
+  color: rgb(255, 255, 255);
+  position: absolute;
+  top: 0;
+  left: 0;
+  display: flex;
+  flex-direction: column;
+  z-index: 1000;
+  opacity: 1;
+  transition: 0.5s;
+}
+.fullCard__container {
+  padding: 5%;
+}
+
+.hide {
+  opacity: 0;
+  z-index: -1000;
+}
+
+.closeButton {
+  width: 100%;
+  height: 50vh;
+  background-color: rgb(0, 140, 255);
+  cursor: pointer;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-bottom-left-radius: 20%;
+  border-bottom-right-radius: 20%;
 }/*# sourceMappingURL=pokeapi.css.map */
