--- a/styles/pokeapi.css
+++ b/styles/pokeapi.css
@@ -4,7 +4,7 @@
 }
 
 body {
-  background-color: rgba(179, 233, 255, 0.63);
+  background-color: rgb(65, 65, 65);
   margin: 0;
   border: 0;
   padding-top: 25%;
@@ -83,14 +83,13 @@ h1 {
 }
 
 .card {
-  width: 80px;
-  height: 115px;
+  width: 100px;
+  height: 100px;
   list-style: none;
   padding: 5px;
   background-color: rgba(255, 255, 255, 0.5803921569);
   color: #222;
   text-align: center;
-  border: 2px solid rgba(0, 0, 0, 0.5);
   border-radius: 10px;
   -o-object-fit: contain;
      object-fit: contain;
@@ -106,9 +105,10 @@ h1 {
   width: 100%;
   text-transform: uppercase;
   font-size: 9px;
-  color: #222;
+  color: rgb(255, 255, 255);
   font-weight: bold;
   margin: 0;
+  padding-top: 5px;
 }
 
 .card-subtitle {
@@ -182,63 +182,63 @@ h1 {
 }
 
 .grass {
-  box-shadow: 0 0 40px 10px inset rgba(29, 204, 23, 0.712);
+  background-color: rgb(102, 155, 100);
 }
 
 .fire {
-  box-shadow: 0 0 40px 10px inset rgba(252, 18, 18, 0.753);
+  background-color: rgba(255, 103, 103, 0.747);
 }
 
 .water {
-  box-shadow: 0 0 40px 10px inset rgba(29, 135, 255, 0.712);
+  background-color: rgb(116, 165, 221);
 }
 
 .bug {
-  box-shadow: 0 0 40px 10px inset rgba(191, 253, 92, 0.925);
+  background-color: rgb(123, 167, 118);
 }
 
 .normal {
-  box-shadow: 0 0 40px 10px inset rgba(255, 255, 255, 0.61);
+  background-color: rgb(172, 172, 172);
 }
 
 .poison {
-  box-shadow: 0 0 40px 10px inset rgba(215, 17, 255, 0.705);
+  background-color: rgba(229, 99, 255, 0.74);
 }
 
 .electric {
-  box-shadow: 0 0 40px 10px inset rgba(251, 255, 5, 0.795);
+  background-color: rgb(255, 234, 116);
 }
 
 .ground {
-  box-shadow: 0 0 40px 10px inset rgba(99, 38, 10, 0.651);
+  background-color: rgba(163, 90, 56, 0.781);
 }
 
 .fighting {
-  box-shadow: 0 0 40px 10px inset rgba(255, 86, 8, 0.685);
+  background-color: rgba(253, 140, 64, 0.795);
 }
 
 .fairy {
-  box-shadow: 0 0 40px 10px inset rgb(252, 154, 235);
+  background-color: rgba(255, 197, 245, 0.842);
 }
 
 .psychic {
-  box-shadow: 0 0 40px 10px inset rgba(127, 2, 245, 0.884);
+  background-color: rgba(155, 48, 255, 0.733);
 }
 
 .rock {
-  box-shadow: 0 0 40px 10px inset rgba(5, 5, 5, 0.418);
+  background-color: rgba(105, 105, 105, 0.801);
 }
 
 .ice {
-  box-shadow: 0 0 40px 10px inset rgba(0, 225, 255, 0.822);
+  background-color: rgba(109, 238, 255, 0.733);
 }
 
 .dragon {
-  box-shadow: 0 0 40px 10px inset rgba(255, 0, 98, 0.808);
+  background-color: rgba(255, 81, 148, 0.774);
 }
 
 .legendary {
-  border: 2px outset rgb(255, 214, 80);
+  box-shadow: 0 0 25px 10px inset rgb(255, 166, 0);
 }
 
 .flying {
@@ -275,27 +275,137 @@ h1 {
   left: 0;
   display: flex;
   flex-direction: column;
+  align-items: center;
   z-index: 1000;
   opacity: 1;
   transition: 0.5s;
 }
-.fullCard__container {
-  padding: 5%;
-}
 
-.hide {
-  opacity: 0;
-  z-index: -1000;
-}
-
-.closeButton {
-  width: 100%;
-  height: 50vh;
-  background-color: rgb(0, 140, 255);
-  cursor: pointer;
+.cardBottom {
+  width: 80%;
+  max-height: 50vh;
+  position: absolute;
+  bottom: 0;
+  padding-bottom: 5%;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
+}
+
+.pokemon--name {
+  width: 100%;
+  font-size: 36px;
+  padding: 20px 0 40px 0;
+  margin-bottom: 10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.pokemon--Types {
+  width: 100%;
+  font-size: 20px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: center;
+}
+.pokemon--Types--type {
+  width: 60px;
+  height: 20px;
+  text-align: center;
+}
+.pokemon--BaseStats {
+  width: 80%;
+  font-size: 16px;
+  text-align: center;
+  margin: 10px 0 10px 0;
+}
+.pokemon--HP {
+  width: 80%;
+  height: 18px;
+  font-size: 12px;
+  text-transform: uppercase;
+  background-color: red;
+  padding-left: 10px;
+  padding-top: 3px;
+  text-align: left;
+  border-radius: 50px;
+  margin: 10px 0 10px 0;
+}
+.pokemon--Attack {
+  width: 80%;
+  height: 18px;
+  font-size: 12px;
+  text-transform: uppercase;
+  background-color: rgb(255, 187, 0);
+  padding-left: 10px;
+  padding-top: 3px;
+  text-align: left;
+  border-radius: 50px;
+  margin: 10px 0 10px 0;
+}
+.pokemon--Defense {
+  width: 80%;
+  height: 18px;
+  font-size: 12px;
+  text-transform: uppercase;
+  background-color: rgb(0, 110, 255);
+  padding-left: 10px;
+  padding-top: 3px;
+  text-align: left;
+  border-radius: 50px;
+  margin: 10px 0 10px 0;
+}
+.pokemon--Speed {
+  width: 80%;
+  height: 18px;
+  font-size: 12px;
+  text-transform: uppercase;
+  background-color: rgb(119, 119, 119);
+  padding-left: 10px;
+  padding-top: 3px;
+  text-align: left;
+  border-radius: 50px;
+  margin: 10px 0 10px 0;
+}
+.pokemon--Exp {
+  width: 80%;
+  height: 18px;
+  font-size: 12px;
+  text-transform: uppercase;
+  background-color: rgb(49, 151, 46);
+  padding-left: 10px;
+  padding-top: 3px;
+  text-align: left;
+  border-radius: 50px;
+  margin: 10px 0 10px 0;
+}
+
+.card--Top {
+  width: 100%;
+  height: 45vh;
+  cursor: pointer;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  padding-top: 3%;
   border-bottom-left-radius: 20%;
   border-bottom-right-radius: 20%;
+}
+.card--Exit {
+  width: 90%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+.card--Img {
+  width: 80%;
+  max-width: 400px;
+  height: 35vh;
+  margin-top: 5%;
+  -o-object-fit: contain;
+     object-fit: contain;
 }/*# sourceMappingURL=pokeapi.css.map */
