--- a/styles/pokeapi.css
+++ b/styles/pokeapi.css
@@ -64,9 +64,14 @@ main {
   top: 0;
   margin: 0;
   padding: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .container {
+  max-width: 800px;
   height: 100%;
   margin: 0 0 0 0;
   position: relative;
@@ -141,27 +146,9 @@ h1 {
   justify-content: center;
   gap: 10px;
   overflow: scroll;
-  -webkit-animation: fadeIn 7s;
-          animation: fadeIn 7s;
+  transition: 0.5s;
 }
 
-@-webkit-keyframes fadeIn {
-  0% {
-    opacity: 0;
-  }
-  100% {
-    opacity: 1;
-  }
-}
-
-@keyframes fadeIn {
-  0% {
-    opacity: 0;
-  }
-  100% {
-    opacity: 1;
-  }
-}
 ::-webkit-scrollbar {
   width: 3px;
 }
@@ -179,6 +166,180 @@ h1 {
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
   background: rgba(252, 235, 1, 0.822);
+}
+
+.fullCard {
+  width: 100%;
+  height: 100vh;
+  background-color: rgb(54, 54, 54);
+  color: rgb(255, 255, 255);
+  position: absolute;
+  top: 0;
+  left: 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  z-index: 1000;
+  opacity: 1;
+  transition: 0.5s;
+  overflow: hidden;
+}
+
+.cardBottom {
+  width: 90%;
+  max-height: 50vh;
+  margin: 1% 0 0 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  transition: 0.5s;
+}
+
+.pokemon--name {
+  width: 100%;
+  font-size: 36px;
+  padding: 10px 0 10px 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.pokemon--Types {
+  width: 100%;
+  font-size: 12px;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+.pokemon--Types--type {
+  width: 90px;
+  height: 15px;
+  margin: 10px;
+  padding: 5px;
+  text-align: center;
+  border-radius: 20px;
+  border: 2px solid rgba(255, 255, 255, 0.596);
+}
+.pokemon--BaseStats {
+  width: 90%;
+  max-width: 800px;
+  font-size: 20px;
+  text-align: center;
+  gap: 15px;
+  margin: 30px 0 10px 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  bottom: 0;
+}
+.pokemon--bar {
+  width: 100%;
+  height: 12px;
+  font-size: 12px;
+  background-color: rgba(255, 255, 255, 0.025);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  border-radius: 50px;
+  border: 2px solid rgba(255, 255, 255, 0.05);
+}
+.pokemon--HP {
+  width: 100%;
+  min-width: 100px;
+  height: 12px;
+  font-size: 12px;
+  text-transform: uppercase;
+  background-color: red;
+  padding-left: 10px;
+  text-align: center;
+  border-radius: 50px;
+  border: 2px solid rgba(255, 255, 255, 0.3);
+}
+.pokemon--Attack {
+  width: 100%;
+  min-width: 100px;
+  height: 12px;
+  font-size: 12px;
+  text-transform: uppercase;
+  background-color: rgb(255, 187, 0);
+  padding-left: 10px;
+  text-align: center;
+  border-radius: 50px;
+  border: 2px solid rgba(255, 255, 255, 0.3);
+}
+.pokemon--Defense {
+  width: 100%;
+  min-width: 100px;
+  height: 12px;
+  font-size: 12px;
+  text-transform: uppercase;
+  background-color: rgb(0, 110, 255);
+  padding-left: 10px;
+  text-align: center;
+  border-radius: 50px;
+  border: 2px solid rgba(255, 255, 255, 0.3);
+}
+.pokemon--Speed {
+  width: 100%;
+  min-width: 100px;
+  height: 12px;
+  font-size: 12px;
+  text-transform: uppercase;
+  background-color: rgb(119, 119, 119);
+  padding-left: 10px;
+  text-align: center;
+  border-radius: 50px;
+  border: 2px solid rgba(255, 255, 255, 0.3);
+}
+.pokemon--Exp {
+  width: 100%;
+  min-width: 100px;
+  height: 12px;
+  font-size: 12px;
+  text-transform: uppercase;
+  background-color: rgb(49, 151, 46);
+  padding-left: 10px;
+  text-align: center;
+  border-radius: 50px;
+  border: 2px solid rgba(255, 255, 255, 0.3);
+}
+
+.card--Top {
+  width: 100%;
+  height: 40vh;
+  font-size: 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  padding-top: 3%;
+  border-bottom-left-radius: 20%;
+  border-bottom-right-radius: 20%;
+  border: 4px solid rgba(255, 255, 255, 0.596);
+  border-top: none;
+  transition: 0.5s;
+}
+.card--Exit {
+  width: 90%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+.card--Img {
+  width: 80%;
+  max-width: 400px;
+  height: 32vh;
+  margin-top: 2%;
+  -o-object-fit: contain;
+     object-fit: contain;
+}
+.card--Pokedex {
+  cursor: pointer;
 }
 
 .grass {
@@ -237,6 +398,14 @@ h1 {
   background-color: rgba(255, 81, 148, 0.774);
 }
 
+.flying2 {
+  background-color: rgb(150, 230, 255);
+}
+
+.ghost2 {
+  background-color: rgb(71, 38, 146);
+}
+
 .legendary {
   box-shadow: 0 0 25px 10px inset rgb(255, 166, 0);
 }
@@ -263,149 +432,4 @@ h1 {
   position: absolute;
   top: 90%;
   left: 40%;
-}
-
-.fullCard {
-  width: 100%;
-  height: 100vh;
-  background-color: rgb(54, 54, 54);
-  color: rgb(255, 255, 255);
-  position: absolute;
-  top: 0;
-  left: 0;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  z-index: 1000;
-  opacity: 1;
-  transition: 0.5s;
-}
-
-.cardBottom {
-  width: 80%;
-  max-height: 50vh;
-  position: absolute;
-  bottom: 0;
-  padding-bottom: 5%;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-
-.pokemon--name {
-  width: 100%;
-  font-size: 36px;
-  padding: 20px 0 40px 0;
-  margin-bottom: 10px;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-.pokemon--Types {
-  width: 100%;
-  font-size: 20px;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-evenly;
-  align-items: center;
-}
-.pokemon--Types--type {
-  width: 60px;
-  height: 20px;
-  text-align: center;
-}
-.pokemon--BaseStats {
-  width: 80%;
-  font-size: 16px;
-  text-align: center;
-  margin: 10px 0 10px 0;
-}
-.pokemon--HP {
-  width: 80%;
-  height: 18px;
-  font-size: 12px;
-  text-transform: uppercase;
-  background-color: red;
-  padding-left: 10px;
-  padding-top: 3px;
-  text-align: left;
-  border-radius: 50px;
-  margin: 10px 0 10px 0;
-}
-.pokemon--Attack {
-  width: 80%;
-  height: 18px;
-  font-size: 12px;
-  text-transform: uppercase;
-  background-color: rgb(255, 187, 0);
-  padding-left: 10px;
-  padding-top: 3px;
-  text-align: left;
-  border-radius: 50px;
-  margin: 10px 0 10px 0;
-}
-.pokemon--Defense {
-  width: 80%;
-  height: 18px;
-  font-size: 12px;
-  text-transform: uppercase;
-  background-color: rgb(0, 110, 255);
-  padding-left: 10px;
-  padding-top: 3px;
-  text-align: left;
-  border-radius: 50px;
-  margin: 10px 0 10px 0;
-}
-.pokemon--Speed {
-  width: 80%;
-  height: 18px;
-  font-size: 12px;
-  text-transform: uppercase;
-  background-color: rgb(119, 119, 119);
-  padding-left: 10px;
-  padding-top: 3px;
-  text-align: left;
-  border-radius: 50px;
-  margin: 10px 0 10px 0;
-}
-.pokemon--Exp {
-  width: 80%;
-  height: 18px;
-  font-size: 12px;
-  text-transform: uppercase;
-  background-color: rgb(49, 151, 46);
-  padding-left: 10px;
-  padding-top: 3px;
-  text-align: left;
-  border-radius: 50px;
-  margin: 10px 0 10px 0;
-}
-
-.card--Top {
-  width: 100%;
-  height: 45vh;
-  cursor: pointer;
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-  align-items: center;
-  padding-top: 3%;
-  border-bottom-left-radius: 20%;
-  border-bottom-right-radius: 20%;
-}
-.card--Exit {
-  width: 90%;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-}
-.card--Img {
-  width: 80%;
-  max-width: 400px;
-  height: 35vh;
-  margin-top: 5%;
-  -o-object-fit: contain;
-     object-fit: contain;
 }/*# sourceMappingURL=pokeapi.css.map */
