--- a/styles/pokeapi.scss
+++ b/styles/pokeapi.scss
@@ -52,10 +52,65 @@ footer {
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
-    bottom: 0%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    bottom: 0;
     margin: 0;
     z-index: 2;
     opacity: 1;
+}
+
+// SEARCHBOX
+
+.searchContainer{
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: flex-end;
+  margin-bottom: 5%;
+}
+
+input[type=text]{
+  position: relative;
+  padding: 10px 20px 10px 20px;
+  width: 1px;
+  color: #525252;
+  text-transform: uppercase;
+  text-align: center;
+  font-size: 16px;
+  font-weight: 100;
+  letter-spacing: 2px;
+  border: none;
+  border-radius: 100px;
+  background-color: rgba(255, 255, 255, 0.452);
+  transition: width 0.5s ease;
+  outline: none;
+  
+  &:focus{ 
+    width: 70%;
+    max-width: 300px;
+    background-image: none;
+    transition: 0.5s;
+    background-color: rgb(255, 255, 255);
+  }
+}
+
+.js-search {
+  background-image: url("/assets/icons/puntero.png");
+  background-repeat: no-repeat;
+  background-size: 30px;
+  background-position: center;
+  padding: 5px 0 5px 0;
+  transition: 0.5s;
+}
+
+i{
+  position: relative;
+  left: -37px;
+  color: #8233C5;
 }
 
 // MAIN
@@ -119,12 +174,6 @@ main {
     font-weight: bold;
     margin: 0;
     padding-top: 5px;
-}
-
-.card-subtitle {
-    font-weight: lighter;
-    color: #666;
-    margin-top: 5px;
 }
 
 .card-image {
@@ -400,7 +449,7 @@ main {
 
 .legendary {box-shadow: 0 0 25px 10px inset rgb(255, 166, 0)}
 
-.flying {
+.flyingcard {
     width: 20px;
     height: 20px;
     background-image: url("/assets/icons/Flying\ type.ico");
@@ -412,7 +461,7 @@ main {
     left: 40%;
 }
 
-.ghost {
+.ghostcard {
     width: 20px;
     height: 20px;
     background-image: url("/assets/icons/Ghost\ type.ico");
