--- a/styles/pokeapi.css
+++ b/styles/pokeapi.css
@@ -28,6 +28,7 @@ header {
   margin: 0;
   position: fixed;
   z-index: 1;
+  filter: grayscale(40%);
 }
 
 .title {
@@ -58,7 +59,7 @@ footer {
   bottom: 0;
   margin: 0;
   z-index: 2;
-  opacity: 1;
+  filter: grayscale(40%);
 }
 
 .searchContainer {
@@ -245,6 +246,7 @@ h1 {
 .pokemon--name {
   width: 100%;
   font-size: 36px;
+  margin-top: 5px;
   padding: 10px 0 10px 0;
   display: flex;
   flex-direction: column;
@@ -375,6 +377,13 @@ h1 {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+}
+.card--Separator {
+  width: 90%;
+  margin-top: 10px;
+  border: 0px;
+  height: 3px;
+  background-image: linear-gradient(to right, transparent, #CCC, transparent);
 }
 .card--Img {
   width: 80%;
