--- a/styles/pokeapi.scss
+++ b/styles/pokeapi.scss
@@ -28,6 +28,7 @@ header {
     margin: 0;
     position: fixed;
     z-index: 1;
+    filter: grayscale(40%);
 }
 
 .title {
@@ -59,7 +60,7 @@ footer {
     bottom: 0;
     margin: 0;
     z-index: 2;
-    opacity: 1;
+    filter: grayscale(40%);
 }
 
 // SEARCHBOX
@@ -251,6 +252,7 @@ main {
   &--name {
     width: 100%;
     font-size: 36px;
+    margin-top: 5px;
     padding: 10px 0 10px 0;
     display: flex;
     flex-direction: column;
@@ -403,13 +405,13 @@ main {
     justify-content: space-between;
   }
 
-  // &--Separator{
-  //   width: 90%;
-  //   margin-top: 10px;
-  //   border: 0;
-  //   height: 3px;
-  //   background-image: linear-gradient(to right, transparent, #CCC, transparent);  
-  // }
+  &--Separator{
+    width: 90%;
+    margin-top: 10px;
+    border: 0px;
+    height: 3px;
+    background-image: linear-gradient(to right, transparent, #CCC, transparent);  
+  }
 
   &--Img{
     width: 80%;
