--- a/styles/pokeapi.css
+++ b/styles/pokeapi.css
@@ -86,6 +86,7 @@ input[type=text] {
   background-color: rgba(255, 255, 255, 0.452);
   transition: width 0.5s ease;
   outline: none;
+  cursor: pointer;
 }
 input[type=text]:focus {
   width: 70%;
