--- a/styles/pokeapi.scss
+++ b/styles/pokeapi.scss
@@ -89,6 +89,7 @@ input[type=text]{
   background-color: rgba(255, 255, 255, 0.452);
   transition: width 0.5s ease;
   outline: none;
+  cursor: pointer;
   
   &:focus{ 
     width: 70%;
