--- a/styles/pokeapi.css
+++ b/styles/pokeapi.css
@@ -1,6 +1,8 @@
+@import url("https://fonts.googleapis.com/css?family=Rubik&display=swap");
 * {
   padding: 0;
   margin: 0;
+  text-decoration: none;
 }
 
 body {
@@ -10,7 +12,7 @@ body {
   padding-top: 25%;
   height: 100%;
   width: 100%;
-  font-family: rubik;
+  font-family: "rubik", sans-serif;
   color: white;
   box-sizing: border-box;
   -webkit-animation: fadeIn 2s;
@@ -396,6 +398,25 @@ h1 {
 }
 .card--Pokedex {
   cursor: pointer;
+}
+
+.game {
+  width: 70px;
+  height: 70px;
+  background-image: url("/assets/images/menu-icon.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+  font-size: 10px;
+  font-weight: bold;
+  color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0 0 0 10px;
+}
+
+.gameLight {
+  box-shadow: 0 0 10px 10px inset rgba(255, 255, 52, 0.616);
 }
 
 .grass {
