--- a/styles/pokeapi.scss
+++ b/styles/pokeapi.scss
@@ -1,6 +1,9 @@
+@import url("https://fonts.googleapis.com/css?family=Rubik&display=swap");
+
 * {
     padding: 0;
     margin: 0;
+    text-decoration: none;
 }
 
 body {
@@ -10,7 +13,7 @@ body {
   padding-top: 25%;
   height: 100%;
   width: 100%;
-  font-family: rubik;
+  font-family: "rubik", sans-serif;
   color: white;
   box-sizing: border-box;
   animation: fadeIn 2s;
@@ -426,6 +429,25 @@ main {
     cursor: pointer;
   }
 
+}
+
+.game {
+  width: 70px;
+  height: 70px;
+  background-image: url("/assets/images/menu-icon.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+  font-size: 10px;
+  font-weight: bold;
+  color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0 0 0 10px;
+}
+
+.gameLight {
+  box-shadow: 0 0 10px 10px inset rgba(255, 255, 52, 0.616);
 }
 
 
