--- a/styles/pokememory.scss
+++ b/styles/pokememory.scss
@@ -17,6 +17,7 @@ body {
   color: white;
   box-sizing: border-box;
   animation: fadeIn 2s;
+  overflow: hidden;
 }
 
 header {
@@ -77,7 +78,8 @@ main{
         align-items: center;
         align-content: center;
         gap: 15px;
-        transition-delay: 1s;
+        opacity: 1;
+        animation: fadeIn 2s linear;
 
         &--scene {
             width: 75px;
@@ -155,3 +157,104 @@ main{
     transform: rotateY(180deg);
 }
 
+.oak {
+    width: 50%;
+    height: 25%;
+    max-height: 300px;
+    max-width: 300px;
+    background-image: url("/assets/images/oak.png");
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: bottom;
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    margin: 20px 40px -12px 0;
+    opacity: 1;
+    animation: fadeIn 2s linear;
+
+
+    &--text {
+        width: 200px;
+        height: 160px;
+        background-color: white;
+        font-size: 10px;
+        color: rgb(46, 46, 46);
+        padding: 10px 20px 20px 20px;
+        border-radius: 20px;
+        position: relative;
+        bottom: 65%;
+        right: 50%;
+    }
+}
+
+@keyframes fadeIn {
+    0% { opacity: 0; }
+    100% { opacity: 1; }
+}
+
+@keyframes fadeOut {
+    100% { opacity: 0; }
+    0% { opacity: 1; }
+}
+
+.fadeOut {
+    animation: fadeOut 1s linear;
+}
+
+.fadeIn {
+    animation: fadeIn 1s linear;
+}
+
+.hide {
+    display: none;
+}
+
+p {
+    margin-bottom: 10px;
+}
+
+.start {
+    font-size: 15px;
+    font-weight: bold;
+    color: red;
+    text-align: center;
+    cursor: pointer;
+}
+
+
+.ash {
+    width: 50%;
+    height: 25%;
+    max-height: 300px;
+    max-width: 300px;
+    background-image: url("/assets/images/ash3.png");
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: bottom;
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    margin: 20px 40px -12px 0;
+
+    &--text {
+        width: 200px;
+        height: 160px;
+        background-color: white;
+        font-size: 10px;
+        color: rgb(46, 46, 46);
+        padding: 10px 20px 20px 20px;
+        border-radius: 20px;
+        position: relative;
+        bottom: 65%;
+        right: 50%;
+    }
+}
+
+.reset {
+    font-size: 15px;
+    font-weight: bold;
+    color: red;
+    text-align: center;
+    cursor: pointer;
+}
